building out base API handler

--- a/docker/nginx/site.cfg
+++ b/docker/nginx/site.cfg
@@ -1,23 +1,57 @@
 server {
 	listen 80;
+	listen 443 default_server ssl;
 	server_name site.local;	
+
+	#ssl on;
+	#ssl_certificate /etc/nginx/ssl/api.local.cevo.com.crt;
+	#ssl_certificate_key /etc/nginx/ssl/api.local.cevo.com.key;
 
 	error_log  /var/log/nginx/error.log;
 	access_log /var/log/nginx/access.log;
 
-	root /var/www/site;
-	index index.php;
+	location / {
+		root /var/www/site/app;
+		index index.php;
+
+		if ($request_method = OPTIONS) {
+			return 200;
+		}
+
+		# if file exists return it right away
+		if (-f $request_filename) {
+			expires 1h;	
+				break;
+		}
+
+		if (-e $request_filename) {
+			expires 1h;
+				break;
+		}
+
+		# otherwise rewrite the thing
+		if (!-e $request_filename) {
+			rewrite ^(.+)$ /index.php last;
+			break;
+		}
+	}
 
 	location ~ \.php$ {
-		try_files $uri =404;
-		
-		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		#try_files $uri =404;
+		#fastcgi_split_path_info ^(.+\.php)(/.+)$;
+
 		fastcgi_pass php:9000;
 		fastcgi_index index.php;
 		
 		include fastcgi_params;
+		#include /etc/nginx/vars/cevo.env/local;
+		#include /etc/nginx/vars/cevo.env/private;
 
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		fastcgi_param PATH_INFO $fastcgi_path_info;
+		fastcgi_param 	SCRIPT_FILENAME	/var/www/site/app$fastcgi_script_name;
+		fastcgi_param 	PATH_INFO 		$fastcgi_path_info;
+		fastcgi_param  	ENV 			local;
+
+		#fastcgi_read_timeout 3600;
+		#fastcgi_send_timeout 3600;
 	}
 }
