--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     ],
     "autoload": {
         "psr-4": {
-            "Qik\\": "src/"
+            "Qik\\": "src/",
+            "App\\": "tests/"
         }
     }
 }
