updating, finishing up response and requests

--- a/docker/nginx/site.cfg
+++ b/docker/nginx/site.cfg
@@ -11,7 +11,7 @@ server {
 	access_log /var/log/nginx/access.log;
 
 	location / {
-		root /var/www/site/app;
+		root /var/www/site/tests;
 		index index.php;
 
 		if ($request_method = OPTIONS) {
@@ -47,7 +47,7 @@ server {
 		#include /etc/nginx/vars/cevo.env/local;
 		#include /etc/nginx/vars/cevo.env/private;
 
-		fastcgi_param 	SCRIPT_FILENAME	/var/www/site/app$fastcgi_script_name;
+		fastcgi_param 	SCRIPT_FILENAME	/var/www/site/tests$fastcgi_script_name;
 		fastcgi_param 	PATH_INFO 		$fastcgi_path_info;
 		fastcgi_param  	ENV 			local;
 
