removing php dep

--- a/docker/nginx/site.cfg
+++ b/docker/nginx/site.cfg
@@ -4,8 +4,8 @@ server {
 	server_name site.local;	
 
 	#ssl on;
-	#ssl_certificate /etc/nginx/ssl/api.local.cevo.com.crt;
-	#ssl_certificate_key /etc/nginx/ssl/api.local.cevo.com.key;
+	#ssl_certificate /etc/nginx/ssl/api.site.local.crt;
+	#ssl_certificate_key /etc/nginx/ssl/api.site.local.key;
 
 	error_log  /var/log/nginx/error.log;
 	access_log /var/log/nginx/access.log;
@@ -44,8 +44,8 @@ server {
 		fastcgi_index index.php;
 		
 		include fastcgi_params;
-		#include /etc/nginx/vars/cevo.env/local;
-		#include /etc/nginx/vars/cevo.env/private;
+		#include /etc/nginx/vars/site.env/local;
+		#include /etc/nginx/vars/site.env/private;
 
 		fastcgi_param 	SCRIPT_FILENAME	/var/www/site/tests$fastcgi_script_name;
 		fastcgi_param 	PATH_INFO 		$fastcgi_path_info;
