adding data model enforcement to API objects

--- a/docker/nginx/site.cfg
+++ b/docker/nginx/site.cfg
@@ -1,7 +1,7 @@
 server {
 	listen 80;
 	listen 443 default_server ssl;
-	server_name site.local;	
+	server_name site.local site.local.com;	
 
 	#ssl on;
 	#ssl_certificate /etc/nginx/ssl/api.site.local.crt;
