--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,15 +16,8 @@ services:
         volumes:
             - ../:/var/www/site
             - ./php/log.cfg:/usr/local/etc/php-fpm.d/zz-log.conf
-    
 
-    #https://github.com/RobLoach/docker-composer/issues/88
-    composer:
-        image: composer/composer
-        volumes_from: [php]
-        working_dir: /var/www/site
-
-    memcached:
-        image: memcached
-        ports:
-            - "11211:11211"
+    #memcached:
+    #    image: memcached
+    #    ports:
+    #        - "11211:11211"
