finishing up data model stuffs

--- a/docker/nginx/api.conf
+++ b/docker/nginx/api.conf
@@ -1,17 +1,19 @@
 server {
 	listen 80;
 	listen 443 default_server ssl;
-	server_name site.local site.local.com;	
-
-	#ssl on;
-	#ssl_certificate /etc/nginx/ssl/api.site.local.crt;
-	#ssl_certificate_key /etc/nginx/ssl/api.site.local.key;
+	server_name api.local.com;
 
 	error_log  /var/log/nginx/error.log;
 	access_log /var/log/nginx/access.log;
 
+	add_header X-Frame-Options SAMEORIGIN always;
+    add_header 'Access-Control-Allow-Origin' * always;
+    add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, AcceptOrigin, Content-Type, Accept, Authorization, CTE-DB-Control, CTE-Origin-Key' always;
+    add_header 'Access-Control-Allow-Methods' "PUT, GET, POST, OPTIONS, DELETE" always;
+    add_header X-Content-Type-Options nosniff always;
+
 	location / {
-		root /var/www/site/tests;
+		root /var/www/tests;
 		index index.php;
 
 		if ($request_method = OPTIONS) {
@@ -44,10 +46,8 @@ server {
 		fastcgi_index index.php;
 		
 		include fastcgi_params;
-		#include /etc/nginx/vars/site.env/local;
-		#include /etc/nginx/vars/site.env/private;
 
-		fastcgi_param 	SCRIPT_FILENAME	/var/www/site/tests$fastcgi_script_name;
+		fastcgi_param 	SCRIPT_FILENAME	/var/www/tests$fastcgi_script_name;
 		fastcgi_param 	PATH_INFO 		$fastcgi_path_info;
 		fastcgi_param  	ENV 			local;
 
