--- a/docker/php/dockerfile
+++ b/docker/php/dockerfile
@@ -11,10 +11,14 @@ RUN apt-get update \
                 libmemcached-dev \
                 zlib1g-dev \
                 libmcrypt-dev \
+                libreadline-dev \
+                libfreetype6-dev \
+                libjpeg62-turbo-dev \
+                libpng12-dev \
+                libpq-dev \
                 libcurl4-openssl-dev \
         " \
         && doNotUninstall=" \
-                libmcrypt4 \
                 libmemcached11 \
                 libmemcachedutil2 \
         " \
@@ -23,8 +27,9 @@ RUN apt-get update \
         \
         && docker-php-source extract \
         && git clone --branch php7 https://github.com/php-memcached-dev/php-memcached /usr/src/php/ext/memcached/ \
-        && docker-php-ext-install memcached curl mbstring mcrypt opcache bcmath iconv \
+                && docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr \
+        && docker-php-ext-install pdo pdo_mysql memcached curl gd mbstring mcrypt zip opcache bcmath iconv \
         \
-        && docker-php-source delete \
-        && apt-mark manual $doNotUninstall \
-        && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false $buildDeps
+        && docker-php-source delete
+        ##&& apt-mark manual $doNotUninstall
+        ## && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false $buildDeps
