switching to forked version of fluentPDO, working on CRUD

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,12 @@
         }
     },
     "require": {
-        "fpdo/fluentpdo": "1.1.*"
-    }
+        "mistevs/fluentpdo": "dev-master"
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url" : "/Users/michaelstevens/Repositories/fluentpdo"
+        }
+    ]
 }
