--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+	"minimum-stability" : "dev",
     "name": "mistevs/qik",
     "description": "A micro PHP API framework",
     "type": "library",
