switching composer file

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,4 @@
 {
-    "minimum-stability" : "dev",
     "name": "mistevs/qik",
     "description": "A micro PHP API framework",
     "type": "library",
@@ -17,12 +16,6 @@
         }
     },
     "require": {
-        "mistevs/fluentpdo": "dev-master"
-    },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url" : "/Users/michaelstevens/Repositories/fluentpdo"
-        }
-    ]
+        "mistevs/fluentpdo": "1.2.*"
+    }
 }
