updating package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mistevs/qik",
+    "name": "QikDev/qik",
     "description": "A micro PHP API framework",
     "type": "library",
     "license": "MIT",
